--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
-title: Moritz-Maria von Igelfeld
+baseURL: "https://cottonlab-psy.github.io" 
+title: COTTONLAB
 theme: PaperMod
 
 enableInlineShortcodes: true
